--- a/tex/proposal/report/proposal.tex
+++ b/tex/proposal/report/proposal.tex
@@ -11,14 +11,20 @@
 \section*{Responsibilities}
 
 \section*{Equipment}
-\begin{itemize}
-\item IoT capable micro-controller or single board computer.
-\item Power supply or batteries + regulator circuit
-\item Amazon echo
-\item Servo or stepper motor
-\item Weight sensors
-\item Multimeter, oscilloscope, and other test equipment
-\item 3D printer for part fabrication
-\end{itemize}
+    \begin{itemize}
+        \item IoT capable micro-controller or single board computer.
+        \item Power supply or batteries + regulator circuit
+        \item Amazon echo
+        \item Servo or stepper motor
+        \item Weight sensors
+        \item Multimeter, oscilloscope, and other test equipment
+        \item 3D printer for part fabrication
+    \end{itemize}
+
+\section*{Functions}
+    \begin{itemize}
+        \item Automatic adjustment of dispension amount.
+    \end{itemize}
+
 
 \end{document}
